axum-required-headers/tests/ui-deps/missing_http/test.stderr
error: Expected to find the 'http' dependency but none was found
 --> test.rs:5:10
  |
5 | #[derive(Headers)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `Headers` (in Nightly builds, run with -Z macro-backtrace for more info)
